Bug 61657 - gusb required unconditionally
Summary: gusb required unconditionally
Status: RESOLVED FIXED
Alias: None
Product: colord
Classification: Unclassified
Component: daemon (show other bugs)
Version: unspecified
Hardware: All OpenBSD
: medium major
Assignee: Richard Hughes
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-03-01 08:42 UTC by Antoine Jacoutot
Modified: 2013-03-04 11:09 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments

Description Antoine Jacoutot 2013-03-01 08:42:54 UTC
Hi.

Since the introduction of libcolorhug into colord, the --disable-gusb
configure flag is not enough since libcolorhug requires gusb
unconditionally:

ch-common.h:30:18: error: gusb.h: No such file or directory

This is problematic on non-linux systems because gtk+3 may want to use
colord (sure it can be disabled but still) along with several GNOME
tools and since gusb depends on gudev it's a no-go.
Is there any way to make this dependency optionnal or to prevent
building libcolorhug altogether?

Or maybe I'm missing something obvious...
Thanks.
Comment 1 Richard Hughes 2013-03-04 11:09:26 UTC
commit 417b4c95c6161090927e61b534d4cc4b924ea5e5
Author: Richard Hughes <richard@hughsie.com>
Date:   Mon Mar 4 11:09:13 2013 +0000

    Fix compile with --disable-gusb
    
    Resolves: https://bugs.freedesktop.org/show_bug.cgi?id=61657


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.