Fix compile with --disable-gusb

Resolves: https://bugs.freedesktop.org/show_bug.cgi?id=61657